test/corpus/positive.scm
=====================
positive/000
=====================
a b
---------------------

(source_file
	(text))


=====================
positive/001
=====================
a b#a b
---------------------

(source_file
	(text)
	(code
		(ident))
	(text))


=====================
positive/002
=====================
#if b {} else {}
---------------------

(source_file
	(code
		(branch
			condition: (ident)
			(block)
			(block))))


=====================
positive/003
=====================
#if b {} elsa {}
---------------------

(source_file
	(code
		(branch
			condition: (ident)
			(block)))
	(text))


=====================
positive/004
=====================
Hello #(a + b) World!
---------------------

(source_file
	(text)
	(code
		(group
			(add
				(ident)
				(ident))))
	(text))


=====================
positive/005
=====================
#(a + b + c)
---------------------

(source_file
	(code
		(group
			(add
				(add
					(ident)
					(ident))
				(ident)))))


=====================
positive/006
=====================
#(a + b * c)
---------------------

(source_file
	(code
		(group
			(add
				(ident)
				(mul
					(ident)
					(ident))))))


=====================
positive/007
=====================
Hello #a + b World!
---------------------

(source_file
	(text)
	(code
		(ident))
	(text))


=====================
positive/008
=====================
#(a * b + c)
---------------------

(source_file
	(code
		(group
			(add
				(mul
					(ident)
					(ident))
				(ident)))))


=====================
positive/009
=====================
#(a() + c)
---------------------

(source_file
	(code
		(group
			(add
				(call
					item: (ident)
					(group))
				(ident)))))


=====================
positive/010
=====================
#a() Hello
---------------------

(source_file
	(code
		(call
			item: (ident)
			(group)))
	(text))


=====================
positive/011
=====================
#a()Hello
---------------------

(source_file
	(code
		(call
			item: (ident)
			(group)))
	(text))


=====================
positive/012
=====================
#a!Hello
---------------------

(source_file
	(code
		(ident))
	(text))


=====================
positive/013
=====================
#a()()Hello
---------------------

(source_file
	(code
		(call
			item: (call
				item: (ident)
				(group))
			(group)))
	(text))


=====================
positive/014
=====================
#[Hello World!]
---------------------

(source_file
	(code
		(content
			(text))))


=====================
positive/015
=====================
#{a}
---------------------

(source_file
	(code
		(block
			(ident))))


=====================
positive/016
=====================
#(a, b)
---------------------

(source_file
	(code
		(group
			(ident)
			(ident))))


=====================
positive/017
=====================
#(a, c: b)
---------------------

(source_file
	(code
		(group
			(ident)
			(tagged
				field: (ident)
				(ident)))))


=====================
positive/018
=====================
#hello(a, c: b)
---------------------

(source_file
	(code
		(call
			item: (ident)
			(group
				(ident)
				(tagged
					field: (ident)
					(ident))))))


=====================
positive/019
=====================
#hello(a, c: b)World
---------------------

(source_file
	(code
		(call
			item: (ident)
			(group
				(ident)
				(tagged
					field: (ident)
					(ident)))))
	(text))


=====================
positive/020
=====================
#hello()[World]
---------------------

(source_file
	(code
		(call
			item:
			(call
				item: (ident)
				(group))	
			(content
				(text)))))


=====================
positive/021
=====================
#if a {}

else {}
---------------------

(source_file
	(code
		(branch
			condition: (ident)
			(block)))
	(parbreak)
	(text))


=====================
positive/022
=====================
#if a {}
elsa {}
---------------------

(source_file
	(code
		(branch
			condition: (ident)
			(block)))
	(text))


=====================
positive/023
=====================
#if a {} elsee {}
---------------------

(source_file
	(code
		(branch
			condition: (ident)
			(block)))
	(text))


=====================
positive/024
=====================
a b
c

d e
---------------------

(source_file
	(text)
	(text)
	(parbreak)
	(text))


=====================
positive/025
=====================
#if a{}


else[]
---------------------

(source_file
	(code
		(branch
			condition: (ident)
			(block)))
	(parbreak)
	(text)
	(text)
	(text))


=====================
positive/026
=====================
#if a[]{}
---------------------

(source_file
	(code
		(branch
			condition: (call
				item: (ident)
				(content))
			(block))))


=====================
positive/027
=====================
#if a []{}
---------------------

(source_file
	(code
		(branch
			condition: (ident)
			(content)))
	(text))


=====================
positive/028
=====================
#if(a)[]{}
---------------------

(source_file
	(code
		(branch
			condition: (call
				item: (group
					(ident))
				(content))
			(block))))


=====================
positive/029
=====================
#if(a) + b[]{}
---------------------

(source_file
	(code
		(branch
			condition: (add
				(group
					(ident))
				(call
					item: (ident)
					(content)))
			(block))))


=====================
positive/030
=====================
*hello* world
---------------------

(source_file
	(strong
		(text))
	(text))


=====================
positive/031
=====================
_hello_ world
---------------------

(source_file
	(emph
		(text))
	(text))


=====================
positive/032
=====================
*hello _world_*
---------------------

(source_file
	(strong
		(text)
		(emph
			(text))))


=====================
positive/033
=====================
#ifa {}
---------------------

(source_file
	(code
		(ident))
	(text))


=====================
positive/034
=====================
#if a {} else {}()
---------------------

(source_file
	(code
		(call
			item: (branch
				condition: (ident)
				(block)
				(block))
			(group))))


=====================
positive/035
=====================
#let a = b
---------------------

(source_file
	(code
		(let
			pattern: (ident)
			value: (ident))))


=====================
positive/036
=====================
#let a = b; Hello
---------------------

(source_file
	(code
		(let
			pattern: (ident)
			value: (ident)))
	(text))


=====================
positive/037
=====================
#a; Hello
---------------------

(source_file
	(code
		(ident))
	(text))


=====================
positive/038
=====================
#{
	let a = b
	a + a
}
---------------------

(source_file
	(code
		(block
			(let
				pattern: (ident)
				value: (ident))
		(add
			(ident)
			(ident)))))


=====================
positive/039
=====================
#(4.2)
---------------------

(source_file
	(code
		(group
			(number))))


=====================
positive/040
=====================
#(4.2em)
---------------------

(source_file
	(code
		(group
			(number
				(unit)))))


=====================
positive/041
=====================
#3
---------------------

(source_file
	(code
		(number)))


=====================
positive/042
=====================
#3.2
---------------------

(source_file
	(code
		(number)))


=====================
positive/043
=====================
#a.b
---------------------

(source_file
	(code
		(field
			(ident)
			field: (ident))))


=====================
positive/044
=====================
H #a

W
---------------------

(source_file
	(text)
	(code
		(ident))
	(parbreak)
	(text))


=====================
positive/045
=====================
Hello #a
World
---------------------

(source_file
	(text)
	(code
		(ident))
	(text))


=====================
positive/046
=====================
Hello #a




World
---------------------

(source_file
	(text)
	(code
		(ident))
	(parbreak)
	(text))


=====================
positive/047
=====================
*_hello_ world*
---------------------

(source_file
	(strong
		(emph
			(text))
		(text)))


=====================
positive/048
=====================
*_*hello*_ world*
---------------------

(source_file
	(strong
		(emph
			(strong
				(text)))
		(text)))


=====================
positive/049
=====================
Hello\nWorld
---------------------

(source_file
	(text
		(escape)))


=====================
positive/050
=====================
Hello\#World
---------------------

(source_file
	(text
		(escape)))


=====================
positive/051
=====================
#[
	Hello
]
---------------------

(source_file
	(code
		(content
			(text))))


=====================
positive/052
=====================


a b


---------------------

(source_file
	(parbreak)
	(text)
	(parbreak))


=====================
positive/053
=====================
a#[

b

]c
---------------------

(source_file
	(text)
	(code
		(content
			(parbreak)
			(text)
			(parbreak)))
	(text))


=====================
positive/054
=====================
a#[
b

]c
---------------------

(source_file
	(text)
	(code
		(content
			(text)
			(parbreak)))
	(text))


=====================
positive/055
=====================
a#[
b
]c
---------------------

(source_file
	(text)
	(code
		(content
			(text)))
	(text))


=====================
positive/056
=====================
a

---------------------

(source_file
	(text))


=====================
positive/057
=====================
// Hey
---------------------

(source_file
	(comment))


=====================
positive/058
=====================
// Hey


---------------------

(source_file
	(comment)
	(parbreak))


=====================
positive/059
=====================
#let a =/* Hey*/ 0
---------------------

(source_file
	(code
		(let
			pattern: (ident)
			(comment)
			value: (number))))


=====================
positive/060
=====================
#let /* HEY */ a = 0
---------------------

(source_file
	(code
		(let
			(comment)
			pattern: (ident)
			value: (number))))


=====================
positive/061
=====================
#set text(a: 0)
---------------------

(source_file
	(code
		(set
			(call
				item: (ident)
				(group
					(tagged
						field: (ident)
						(number)))))))


=====================
positive/062
=====================
#{
	set text()
}
---------------------

(source_file
	(code
		(block
			(set
				(call
					item: (ident)
					(group))))))


=====================
positive/063
=====================
#{
	set text()


	[Hey]
}
---------------------

(source_file
	(code
		(block
			(set
				(call
					item: (ident)
					(group)))
			(content
				(text)))))


=====================
positive/064
=====================
#"a"4
---------------------

(source_file
	(code
		(string))
	(text))


=====================
positive/065
=====================
#"a\""4
---------------------

(source_file
	(code
		(string
			(escape)))
	(text))


=====================
positive/066
=====================
#import "a"
---------------------

(source_file
	(code
		(import
			(string))))


=====================
positive/067
=====================
#import "a": a, b
---------------------

(source_file
	(code
		(import
			(string)
			(binding
				(ident))
			(binding
				(ident)))))


=====================
positive/068
=====================
#(
	a
)
---------------------

(source_file
	(code
		(group
			(ident))))


=====================
positive/069
=====================
#(
	a,
)
---------------------

(source_file
	(code
		(group
			(ident))))


=====================
positive/070
=====================
#(
	a,


	o
)
---------------------

(source_file
	(code
		(group
			(ident)
			(ident))))


=====================
positive/071
=====================
#(
	b,
	c: d,
)
---------------------

(source_file
	(code
		(group
			(ident)
			(tagged
				field: (ident)
				(ident)))))


=====================
positive/072
=====================
#include "a"     
---------------------

(source_file
	(code
		(include
			(string))))


=====================
positive/073
=====================
#let a = 0          
---------------------

(source_file
	(code
		(let
			pattern: (ident)
			value: (number))))


=====================
positive/074
=====================
#import "a";Hello
---------------------

(source_file
	(code
		(import
			(string)))
	(text))


=====================
positive/075
=====================
#import "a"  ; Hello
---------------------

(source_file
	(code
		(import
			(string)))
	(text))


=====================
positive/076
=====================
#(2 / 1 * 3)
---------------------

(source_file
	(code
		(group
			(mul
				(div
					(number)
					(number))
				(number)))))


=====================
positive/077
=====================
#(2 - 1 * 3)
---------------------

(source_file
	(code
		(group
			(sub
				(number)
				(mul
					(number)
					(number))))))


=====================
positive/078
=====================
#(2 + - 1)
---------------------

(source_file
	(code
		(group
			(add
				(number)
				(sign
					(number))))))



=====================
positive/079
=====================
#(2 - - 1)
---------------------

(source_file
	(code
		(group
			(sub
				(number)
				(sign
					(number))))))


=====================
positive/080
=====================
#(0 in "0" not in a)
---------------------

(source_file
	(code
		(group
			(in
				(in
					(number)
					(string))
				(ident)))))


=====================
positive/081
=====================
#if 2 > 1 []
---------------------

(source_file
	(code
		(branch
			condition: (cmp
				(number)
				(number))
			(content))))


=====================
positive/082
=====================
#(3

+

4

)
---------------------

(source_file
	(code
		(group
			(add
				(number)
				(number)))))


=====================
positive/083
=====================
#(
let


a

= 0


+2)
---------------------

(source_file
	(code
		(group
			(let
				pattern: (ident)
				value: (add
					(number)
					(number))))))


=====================
positive/084
=====================
#(a => a)
---------------------

(source_file
	(code
		(group
			(lambda
				pattern: (ident)
				value: (ident)))))


=====================
positive/085
=====================
#range().map
---------------------

(source_file
	(code
		(field
			(call
				item: (ident)
				(group))
			field: (ident))))


=====================
positive/086
=====================
#if a {}

---------------------

(source_file
	(code
		(branch
			condition: (ident)
			(block))))


=====================
positive/087
=====================
#{
 }
---------------------

(source_file
	(code
		(block)))


=====================
positive/088
=====================
#"httpsgitlab.com"
---------------------

(source_file
	(code
		(string)))


=====================
positive/089
=====================
#"https://gitlab.com"
---------------------

(source_file
	(code
		(string)))


=====================
positive/090
=====================
#a-b
---------------------

(source_file
	(code
		(ident)))


=====================
positive/091
=====================
#for i in a {}
---------------------

(source_file
	(code
		(for
			pattern: (ident)
			value: (ident)
			(block))))


=====================
positive/092
=====================
#{let x = 1; x + 2}
---------------------

(source_file
	(code
		(block
			(let
				pattern: (ident)
				value: (number))
			(add
				(ident)
				(number)))))


=====================
positive/093
=====================
#[*Hey* there!]
---------------------

(source_file
	(code
		(content
			(strong
				(text))
			(text))))


=====================
positive/094
=====================
#let add(x, y) = x + y
Sum is #add(2, 3).
---------------------

(source_file
	(code
		(let
			pattern: (call
				item: (ident)
				(group
					(ident)
					(ident)))
			value: (add
				(ident)
				(ident))))
	(text)
	(code
		(call
			item: (ident)
			(group
				(number)
				(number))))
	(text))


=====================
positive/095
=====================
#a. Hello
---------------------

(source_file
	(code
		(ident))
	(text))


=====================
positive/096
=====================
#a._b_
---------------------

(source_file
	(code
		(field
			(ident)
			field: (ident))))


=====================
positive/097
=====================
#a._ b _
---------------------

(source_file
	(code
		(ident))
	(text)
	(emph
		(text)))


=====================
positive/098
=====================
#let (_, y) = (1, 2)
---------------------

(source_file
	(code
		(let
			pattern: (group
				(ident)
				(ident))
			value: (group
				(number)
				(number)))))


=====================
positive/099
=====================
#let (a, .., b) = (1, 2, 3, 4)
---------------------

(source_file
	(code
		(let
			pattern: (group
				(ident)
				(elude)
				(ident))
			value: (group
				(number)
				(number)
				(number)
				(number)))))


=====================
positive/100
=====================
#let (Homer, ..other) = books
---------------------

(source_file
	(code
		(let
			pattern: (group
				(ident)
				(elude
					(ident)))
			value: (ident))))


=====================
positive/101
=====================
#l.zip(r).map(
  ((a,b)) => a + b
)
---------------------

(source_file
	(code
		(call
			item: (field
				(call
					item: (field
						(ident)
						field: (ident))
					(group
						(ident)))
				field: (ident))
			(group
				(lambda
					pattern: (group
						(group
							(ident)
							(ident)))
					value: (add
						(ident)
						(ident)))))))


=====================
positive/102
=====================
#(a, b => b)
---------------------

(source_file
	(code
		(group
			(ident)
			(lambda
				pattern: (ident)
				value: (ident)))))


=====================
positive/103
=====================
#if a {}
else if b {}
else {}
---------------------

(source_file
	(code
		(branch
			condition: (ident)
			(block)))
	(text)
	(text))


=====================
positive/104
=====================
#while n < 10 {
	(n,)
}
---------------------

(source_file
	(code
		(while
			condition: (cmp
				(ident)
				(number))
			(block
				(group
					(ident))))))


=====================
positive/105
=====================
```rust
fn main() {}
```
---------------------

(source_file
	(raw_blck
			lang: (ident)
			(blob)))


=====================
positive/106
=====================
Hello_World
---------------------

(source_file
	(text))


=====================
positive/107
=====================
Hello*World
---------------------

(source_file
	(text))


=====================
positive/108
=====================
_UNIX_.
---------------------

(source_file
	(emph
		(text))
	(text))


=====================
positive/109
=====================
0_\n2_
---------------------

(source_file
	(text)
	(emph
		(text
			(escape))))


=====================
positive/110
=====================
$a$
---------------------

(source_file
	(math
		(formula
			(letter))))


=====================
positive/111
=====================
#true
---------------------

(source_file
	(code
		(bool)))


=====================
positive/112
=====================
#(a
: "hey")
---------------------

(source_file
	(code
		(group
			(tagged
				field: (ident)
				(string)))))


=====================
positive/113
=====================
= Hello World
Hey
---------------------

(source_file
	(section
		(heading
			(text))
		(content
			(text))))


=====================
positive/114
=====================
== Hello World
Hey
---------------------

(source_file
	(section
		(heading
			(text))
		(content
			(text))))


=====================
positive/115
=====================
= Hello\
World
---------------------

(source_file
	(section
		(heading
			(text)
			(linebreak))
		(content
			(text))))


=====================
positive/116
=====================
_
= Hello _World_
_
---------------------

(source_file
	(emph
		(section
			(heading
				(text)
				(emph
					(text)))
			(content))))


=====================
positive/117
=====================
#let a() = {
  return 2
}
---------------------

(source_file
	(code
		(let
			pattern: (call
				item: (ident)
				(group))
			value: (block
				(return
					(number))))))


=====================
positive/118
=====================
#show par: set text(size: 3em)
---------------------

(source_file
	(code
		(show
			pattern: (ident)
			value: (set
				(call
					item: (ident)
					(group
						(tagged
							field: (ident)
							(number
								(unit)))))))))


=====================
positive/119
=====================
\n
---------------------

(source_file
	(text
		(escape)))


=====================
positive/120
=====================
\u{1f600}
---------------------

(source_file
	(text
		(escape)))


=====================
positive/121
=====================
// Hello
---------------------

(source_file
	(comment))


=====================
positive/122
=====================
#show: columns.with(2)
---------------------

(source_file
	(code
		(show
			value: (call
				item: (field
					(ident)
					field: (ident))
				(group
					(number))))))


=====================
positive/123
=====================
#(a and b or not c)
---------------------

(source_file
	(code
		(group
			(or
				(and
					(ident)
					(ident))
				(not
					(ident))))))


=====================
positive/124
=====================
#<hello>
---------------------

(source_file
	(code
		(label)))


=====================
positive/125
=====================
#<héllo>
---------------------

(source_file
	(code
		(label)))


=====================
positive/126
=====================
#let Échö = 8
---------------------

(source_file
	(code
		(let
			pattern: (ident)
			value: (number))))


=====================
positive/127
=====================
#"Hello\u{fff}World"
---------------------

(source_file
	(code
		(string
			(escape))))


=====================
positive/128
=====================
*#e*
---------------------

(source_file
	(strong
		(code
			(ident))))


=====================
positive/129
=====================
** Hello ** World
---------------------

(source_file
	(strong)
	(text)
	(strong)
	(text))


=====================
positive/130
=====================
__ Hello ** World
---------------------

(source_file
	(emph)
	(text)
	(strong)
	(text))


=====================
positive/131
=====================
__ Hello $$ World
---------------------

(source_file
	(emph)
	(text)
	(math)
	(text))


=====================
positive/132
=====================
__** Hello $$$$ World
---------------------

(source_file
	(emph)
	(strong)
	(text)
	(math)
	(math)
	(text))


=====================
positive/133
=====================
#import "a": b,
c, d
---------------------

(source_file
	(code
		(import
			(string)
			(binding
				(ident))))
	(text))


=====================
positive/134
=====================
#let a
= 0
---------------------

(source_file
	(code
		(let
			pattern: (ident)))
	(section
		(heading
			(text))
		(content)))


=====================
positive/135
=====================
#(a: b
 )
---------------------

(source_file
	(code
		(group
			(tagged
				field: (ident)
				(ident)))))


=====================
positive/136
=====================
#if a {}
else if b {}
---------------------

(source_file
	(code
		(branch
			condition: (ident)
			(block)))
	(text))


=====================
positive/137
=====================
#(2 /*Hello*/+ 3)
---------------------

(source_file
	(code
		(group
			(add
				(number)
				(comment)
				(number)))))


=====================
positive/138
=====================
#{
	2
	+ 2
}
---------------------
